# python-template

./: Dockerfile  DockerfileCompose  docker-compose.yml  readme.md  requirements_dev.txt  setup.cfg
.github/workflows/: test.yml
src/: server.py
src/foo/: __init__.py  bar.py
src/tests/: test_foo.py
tests/: test_foo.py
