[metadata]
name =
    template_repo
license_file =
    LICENSE

[options]
packages =
    foo
python_requires =
    >=3.6
install_requires =
    numpy > 1.2
package_dir =
    =src
zip_safe =
    no

[options.package_data]
foo = py.typed

[flake8]
max-line-length =
    160
exclude =
    .git,
    __pycache__,
per-file-ignores =
    # Ignore the `imported but unused` warning
    __init__.py: F401